Tune BackgroundHTMLParser's pendingTokenLimit based on a benchmark https://bugs.webkit.org/show_bug.cgi?id=110408

Reviewed by Adam Barth.

This constant was tuned by running the top 25 sites in Telemetry on a Nexus 7 device.
The new value decreases the maximum time spent parsing by 40% without significantly impacting total parse time or DOMContentLoaded.

No new tests because no new functionality.

* html/parser/BackgroundHTMLParser.cpp:
(WebCore):


Canonical link: https://commits.webkit.org/128792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143649 268f45cc-cd09-0410-ab3c-d52691b4dbfc